UC-115 fixes