@@ -1,37 +1,42 @@
 package com.unicloudapp.cloud.application;
 
-import com.unicloudapp.cloud.application.port.CloudConnectorClientFactoryPort;
 import com.unicloudapp.cloud.application.port.CloudConnectorRepositoryPort;
 import com.unicloudapp.cloud.domain.connector.CloudConnector;
 import com.unicloudapp.common.vo.cloud.CloudConnectorId;
 import com.unicloudapp.common.vo.cloud.CloudResourceType;
-import jakarta.annotation.PostConstruct;
+import com.unicloudapp.common.vo.cloud.CostLimit;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.val;
+import org.springframework.scheduling.support.CronExpression;
 import org.springframework.stereotype.Service;
 
-import java.math.BigDecimal;
+import java.util.Collections;
 import java.util.List;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class CloudConnectorService {
 
     private final CloudConnectorRepositoryPort cloudConnectorRepositoryPort;
 
-    @Transactional
     public void createConnector(
-
+        CloudConnectorId cloudConnectorId,
+        String host,
+        Integer port,
+        CostLimit costLimit,
+        CronExpression cronExpression,
+        String name
     ) {
         val cloudConnector = CloudConnector.builder()
-                .cloudConnectorId(CloudConnectorId.of("aws"))
-                .host("localhost")
-                .port(0)
-                .defaultCostLimit(BigDecimal.ONE)
-                .cronExpression("")
-                .name("")
-                .resourceTypes(List.of())
+                .cloudConnectorId(cloudConnectorId)
+                .host(host)
+                .port(port)
+                .defaultCostLimit(costLimit)
+                .cronExpression(cronExpression)
+                .name(name)
+                .resourceTypes(Collections.emptyList())
                 .build();
         if (cloudConnectorRepositoryPort.findByClientId(cloudConnector.getCloudConnectorId()).isPresent()) {
             throw new IllegalArgumentException("CloudVendorConnectorId " + cloudConnector.getCloudConnectorId() + " already exists");
@@ -39,12 +44,11 @@ public class CloudConnectorService {
         cloudConnectorRepositoryPort.save(cloudConnector);
     }
 
-    @Transactional
-    public void addResourceType(CloudConnectorId cloudConnectorId, CloudResourceType cloudResourceType) {
+    public void setResourceType(CloudConnectorId cloudConnectorId, List<CloudResourceType> cloudResourceTypes) {
         CloudConnector cloudConnector = cloudConnectorRepositoryPort
                 .findByClientId(cloudConnectorId)
                 .orElseThrow();
-        cloudConnector.addResourceType(cloudResourceType);
+        cloudResourceTypes.forEach(cloudConnector::addResourceType);
         cloudConnectorRepositoryPort.save(cloudConnector);
     }
 }
